<resources>
    <string name="app_name">5846_2020_scout</string>
    <string name="action_settings">Settings</string>
    <string name="initSel1_text">Enter a Match</string>
    <string name="initSel4_text">How to Use This App</string>
    <string name="initSel3_text">Download Data to PC</string>
    <string name="initSel2_text">Set Competition</string>
    <string name="appTitle">5846 Scouting App System</string>
    <string name="initButton_text">Go!</string>
    <string name="SubmitButton">Submit</string>
    <string name="practiceModeSwitch">Practice Mode</string>
    <string name="matchNumBox">Match Number</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="returnButton">Return</string>
    <string name="low_Score">Cells Scored, Low Goal</string>
    <string name="Out_High_score">Cells Scored, Outer High Goal</string>
    <string name="Out_In_Goal">Cells Scored, Inner High Goal</string>
    <string name="Max_cells">Max # of power cells carried.</string>
    <string name="Ctrl_Activate">Control Panel Activated?</string>
    <string name="Ctrl_Enabled">Control Panel Enabled?</string>
    <string name="Line_Crossed">Initiation Line Crossed?</string>
    <string name="Lv_Switch">Switch Level?</string>
    <string name="RB_Position">Robot Position?</string>
    <string name="park">Parked?</string>
    <string name="climb">Climbed?</string>
    <string name="back">Back to Menu</string>
    <string name="debug">Debug</string>
    <string name="TeleOp">TeleOp</string>
    <string name="set_Comp">Set Compitition</string>
    <string name="end">Endgame</string>
    <string name="auto">auto</string>
    <string name="pre">Pre Match</string>
    <string name="main">Main Page</string>
    <string name="auto_score">Autonomous Score</string>
    <string name="total_score">Total Score</string>
    <string name="teleop_score">Teleop Score</string>
    <string name="endgame_score">Endgame Score</string>
    <string name="team_number">Team Number</string>
    <string name="no_data">Data will not be recorded.</string>
    <string name="practice_on">Practice Mode Enabled.</string>
    <string name="scout_s_initials">Scout\'s Initials</string>
    <string name="auto_points">Auto Points</string>
    <string name="final_review">Final Review</string>
    <string name="switch_level">Switch Level?</string>
    <string name="robot_position">Robot Position?</string>
    <string name="parked">Parked?</string>
    <string name="climbed">Climbed?</string>
    <string name="endgame_data">Endgame Data</string>
    <string name="low_scored">Low Scored</string>
    <string name="chose_the_current_comp">Chose the current Comp</string>
    <string name="bean">BeanTown</string>
    <string name="battle">Battlecry</string>
    <string name="worlds">Worlds</string>
    <string name="ne_districts">NE Districts</string>
    <string name="compitition_at_wpi">Compitition at WPI</string>
    <string name="south_east_mass">South East MASS</string>
    <string name="analyze_data">Analyze Data</string>
</resources>