<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/compSelectList"
                android:layout_width="324dp"
                android:layout_height="193dp"
                android:layout_marginTop="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/compSEM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/south_east_mass"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compWPI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compitition_at_wpi"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compNEDCMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ne_districs"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compWorlds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/worlds"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compBattle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battle"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compBean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bean"
                    android:textSize="24sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/compLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/chose_the_current_comp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/SubmitButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compSelectList" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>