<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoodinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/prematchSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/SubmitButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compSelectList" />

            <Switch
                android:id="@+id/pracToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/practiceModeSwitch"
                android:textOn="On"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matchNumberInput" />

            <TextView
                android:id="@+id/matchNumBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/matchNumBox"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamNumberInput" />

            <EditText
                android:id="@+id/matchNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matchNumBox" />

            <TextView
                android:id="@+id/scoutInitialsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/scout_s_initials"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pracModeText2" />

            <EditText
                android:id="@+id/initialsInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scoutInitialsBox" />

            <TextView
                android:id="@+id/pracModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_on"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pracToggle" />

            <TextView
                android:id="@+id/pracModeText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pracModeText" />

            <Button
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/returnButton"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prematchSubmitButton" />

            <EditText
                android:id="@+id/teamNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamNumBox" />

            <TextView
                android:id="@+id/teamNumBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/team_number"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/compSelectList"
                android:layout_width="324dp"
                android:layout_height="193dp"
                android:layout_marginTop="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/scoutInitialsBox">

                <RadioButton
                    android:id="@+id/compSEM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/south_east_mass"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compWPI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compitition_at_wpi"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compNEDCMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ne_districs"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compWorlds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/worlds"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compBattle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battle"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/compBean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bean"
                    android:textSize="24sp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>